Fixed stretched embed images with the full-width-embeds setting on.

--- a/discord/discord-customization/discord-customization.user.css
+++ b/discord/discord-customization/discord-customization.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           Discord - Customization
 @description    Provides some extra customization options for Discord.
-@version        2024.02.23.16.42
+@version        2024.03.12.17.02
 @author         MetalTxus
 @namespace      https://github.com/jesuscc1993/
 @license        CC BY-SA 4.0
@@ -352,6 +352,10 @@
     &,
     [class*="gridContainer_"] {
       max-width: 100% !important;
+    }
+
+    [class*="embedGalleryImagesWrapper"] {
+      max-width: 536px;
     }
   }
 
